--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <title>Start</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="build/js/vendor.min.js"></script>
-    <link rel="stylesheet" href="build/css/vendor.css">
+    <!-- <link rel="stylesheet" href="build/css/vendor.css"> -->
+    <link rel="stylesheet" href="build/css/main.css">
+    <link href='https://fonts.googleapis.com/css?family=Rye' rel='stylesheet' type='text/css'>
     <!-- 1. Load libraries -->
     <!-- IE required polyfills, in this exact order -->
     <script src="node_modules/systemjs/dist/system-polyfills.js"></script>
